# SeryRemoteID

./: AGENTS.md  README.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/canard/: CMakeLists.txt
firmware/components/dronecan_generated/: CMakeLists.txt
firmware/components/mavlink/include/mavlink/ASLUAV/: ASLUAV.h  mavlink.h
firmware/components/mavlink/include/mavlink/AVSSUAS/: AVSSUAS.h  mavlink.h
firmware/components/mavlink/include/mavlink/all/: all.h  mavlink.h
firmware/components/mavlink/include/mavlink/ardupilotmega/: ardupilotmega.h  mavlink.h
firmware/components/mavlink/include/mavlink/common/: common.h  mavlink.h
firmware/components/mavlink/include/mavlink/cubepilot/: cubepilot.h  mavlink.h
firmware/components/mavlink/include/mavlink/development/: development.h  mavlink.h
firmware/components/mavlink/include/mavlink/icarous/: icarous.h  mavlink.h
firmware/components/mavlink/include/mavlink/loweheiser/: loweheiser.h  mavlink.h
firmware/components/monocypher/: CMakeLists.txt
firmware/components/opendroneid/: CMakeLists.txt  wifi.c
firmware/main/: CMakeLists.txt  app_main.c  cfg.c  cfg.h  config.h
firmware/main/board/: rid_led.c  rid_led.h
firmware/main/net/: rid_ble.c  rid_ble.h  rid_wifi.c  rid_wifi.h
firmware/main/protocol/: rid_state.c  rid_state.h
firmware/main/security/: rid_secure.c  rid_secure.h
firmware/main/transport/: rid_dronecan.c  rid_dronecan.h  rid_mavlink.c  rid_mavlink.h
firmware/main/web/: rid_firmware_check.c  rid_firmware_check.h  rid_web.c  rid_web.h
(+14 files in other folders)
